tests/e2e/tests/pilot/testdata/v1alpha3/disable-mtls-egressgateway.yaml
# This DestinationRule is to disable mTLS for egressgateway.
apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: "disable-egress-mtls"
spec:
  host: istio-egressgateway
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: "disable-bookinfo.com-mtls"
spec:
  host: "*.eu.bookinfo.com"
  trafficPolicy:
    tls:
      mode: DISABLE
