tests/e2e/tests/pilot/testdata/v1alpha3/disable-mtls-t.yaml
apiVersion: "authentication.istio.io/v1alpha1"
kind: "Policy"
metadata:
  name: "disable-mtls-t"
spec:
  targets:
  - name: "t"
