tests/e2e/tests/pilot/testdata/v1alpha3/external-service-dog.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ExternalService
metadata:
  name: external-service-dog
spec:
  hosts:
    - dog.ceo
  ports:
  - number: 80
    name: http
    protocol: HTTP
  discovery: DNS
