tests/e2e/tests/pilot/testdata/v1alpha3/external-service-https-google.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ExternalService
metadata:
  name: external-service-https-google
spec:
  hosts:
  - www.google.com
  ports:
  - number: 443
    name: https
    protocol: http
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destination-rule-https-google
spec:
  host: www.google.com
  trafficPolicy:
    tls:
      mode: SIMPLE
