tests/e2e/tests/pilot/testdata/v1alpha3/externalservice-wildcard-httpbin.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ExternalService
metadata:
  name: httpbin-wildcard
spec:
  hosts:
    - "*.httpbin.org"
  ports:
    - number: 80
      name: http-port
      protocol: HTTP
