tests/e2e/tests/pilot/testdata/v1alpha3/rule-503test-destinationrule-c-add-subset.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destination-rule-c
spec:
  host: c
  # {{if eq .globalMTlsEnable "true"}}
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  # {{end}}
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
    # Always Add new subsets before deleting the old ones (make before break)
    - name: v3
      labels:
        version: v1
    - name: v4
      labels:
        version: v2
