tests/e2e/tests/pilot/testdata/v1alpha3/rule-503test-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-bound-route
spec:
  hosts:
    - uk.bookinfo.com
  gateways:
  - istio-ingressgateway # pinned to ingress gateway only
  http:
    - route:
      - destination:
          host: c
          subset: v1
          port:
            name: http
        weight: 50
      - destination:
          host: c
          subset: v2
          port:
            name: http
        weight: 50
