tests/e2e/tests/pilot/testdata/v1alpha3/rule-content-route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default-route
spec:
  hosts:
    - c.istio-system.svc.cluster.local
  http:
    - match:
      - headers:
          version:
            exact: v2
        source_labels:
          version: v1
      route:
      - destination:
          host: c.istio-system.svc.cluster.local
          subset: v2
        weight: 100
    - route:
      - destination:
          host: c.istio-system.svc.cluster.local
          subset: v1
        weight: 100
