tests/e2e/tests/pilot/testdata/v1alpha3/rule-default-route-append-headers.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default-route
spec:
  hosts:
    - c.istio-system.svc.cluster.local
  http:
    - route:
      - destination:
          host: c.istio-system.svc.cluster.local
          subset: v1
        weight: 100
      append_headers:
        istio-custom-header: user-defined-value
