tests/e2e/tests/pilot/testdata/v1alpha3/rule-default-route-cors-policy.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default-route
spec:
  hosts:
    - c.istio-system.svc.cluster.local
  http:
    - route:
      - destination:
          host: c.istio-system.svc.cluster.local
          subset: v1
        weight: 100
      corsPolicy:
        allowOrigin:
          - http://foo.example
        allowMethods:
          - POST
          - GET
          - OPTIONS
        allowHeaders:
          - content-type
        exposeHeaders:
          - x-custom-header
        maxAge: 300s
        allowCredentials: true
