tests/e2e/tests/pilot/testdata/v1alpha3/rule-force-a-through-ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: force-a-through-ingress-gateway
spec:
  hosts:
  - a.istio-system.svc.cluster.local
  gateways:
  - gateway-a
  - mesh
  tcp:
  - match:
      # only match the TCP port so we don't affect HTTP traffic
    - port: 9090
      gateways:
      - mesh
    route:
    - destination:
        host: istio-ingressgateway.istio-system.svc.cluster.local
        port:
          number: 31400
  - match:
    - gateways:
      - gateway-a
    route:
    - destination:
        host: a.istio-system.svc.cluster.local
        port:
          number: 90
