tests/e2e/tests/pilot/testdata/v1alpha3/rule-ingressgateway-externalservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-externalservice
spec:
  hosts:
    - dog.ceo
  gateways:
  - istio-ingressgateway # pinned to ingress gateway only
  http:
    - route:
      - destination:
          host: dog.ceo
          port:
            name: http
        weight: 100
