tests/e2e/tests/pilot/testdata/v1alpha3/rule-ingressgateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-bound-route
spec:
  hosts:
    - uk.bookinfo.com
  gateways:
  - istio-ingressgateway # pinned to ingress gateway only
  http:
#    - match:
#      - headers:
#          version:
#            exact: v2
#        source_labels:
#          version: v1
#      route:
#      - destination:
#          host: c
#          subset: v2
#        weight: 100
    - route:
      - destination:
          host: c
          subset: v2
        weight: 100
