tests/e2e/tests/pilot/testdata/v1alpha3/rule-redirect-injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default-route
spec:
  hosts:
    - c.istio-system.svc.cluster.local
  http:
    - match:
      - headers:
          testredirect:
            exact: enabled
      redirect:
        uri: /new/path
        authority: b
