tests/e2e/tests/pilot/testdata/v1alpha3/rule-websocket-route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default-route
spec:
  hosts:
    - c.istio-system.svc.cluster.local
  http:
    - match:
      - headers:
          testwebsocket:
            exact: enabled
      route:
      - destination:
          host: c.istio-system.svc.cluster.local
          subset: v1
      websocketUpgrade: true
