tests/e2e/tests/pilot/testdata/v1alpha3/serviceentry-httpbin.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: httpbin
spec:
  hosts:
    - "httpbin.org"
  ports:
    - number: 80
      name: http-port
      protocol: HTTP
  discovery: NONE
