tests/e2e/tests/pilot/testdata/v1alpha3/serviceentry-tcp-wikipedia-cidr.yaml
# wikipedia.org IP addresses, according to https://www.mediawiki.org/wiki/Wikipedia_Zero/IP_Addresses
# 91.198.174.192/27
# 103.102.166.224/27
# 198.35.26.96/27
# 208.80.153.224/27
# 208.80.154.224/27

apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: wikipedia-range
spec:
  hosts:
  - "wikipedia.org"
  addresses:
    - 91.198.174.192/27
    - 103.102.166.224/27
    - 198.35.26.96/27
    - 208.80.153.224/27
    - 208.80.154.224/27
  ports:
    - number: 443
      protocol: TCP
      name: tcp-port
